# hw01

./: .hlint.yaml  CHANGELOG.md  LICENSE  Main.hs  hie.yaml  hw01.cabal  submit.sh
src/: HW01.hs  Kata.hs  Main.hs
