cabal-version:       2.2
name:                hw01
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Stephanie Weirich
maintainer:          sweirich@seas.upenn.edu
build-type:          Simple
extra-source-files:  CHANGELOG.md

common common-stanza
  build-depends:     
      base >=4.14
    , HUnit >=1.6
    , directory >=1.3.6 && <1.4
  ghc-options:       -Wno-type-defaults -Wincomplete-patterns
  default-language:  GHC2021
  default-extensions:
  
library 
  import: common-stanza
  hs-source-dirs: src
  exposed-modules: HW01, Kata
  
executable hw01
  import: common-stanza
  hs-source-dirs: src
  build-depends: doctest
  main-is: Main.hs
  other-modules: HW01, Kata

